--- a/Assignment4-Client/tweets.html
+++ b/Assignment4-Client/tweets.html
@@ -2,5 +2,11 @@
  <html> 
 	 <head> 
  		 <title>Tweets</title> 
- 	</head> 
+ <link rel='stylesheet' href='table.css' type='text/css'/> <div class='CSSTableGenerator' >	</head> 
  <body> 	<table>
+<tr><td>User</td><td>Tweet</td><td>Time</td></tr>
+<tr><td>ran</td><td>hello twitter</td><td>12:00</td></tr>
+<tr><td>idan</td><td>adiel ashrov is my king</td><td>12:01</td></tr>
+</table>
+</div>	</body>
+ </html>
