--- a/Assignment4-Client/tweets.html
+++ b/Assignment4-Client/tweets.html
@@ -1,7 +1,39 @@
-<!DOCTYPE html> 
- <html> 
-	 <head> 
- 		 <title>Tweets</title> 
- <link rel='stylesheet' href='table.css' type='text/css'/> <div class='CSSTableGenerator' >	</head> 
- <body> 	<table>
-<tr><td>User</td><td>Tweet</td><td>Time</td></tr>
+</table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html></table>
+</div>	</body>
+ </html>
